1999-04-17  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/resize.c (resize_window): fixed resize-loosing-grip bug

	* fvwm/functions.c (func_config):
	* fvwm/functions.h (FunctionItem):
	(struct functions):
 	added FUNC_DONT_REPEAT flag to functions structure, changed Bool
	f_needs_window/func_needs_window to unsigned char flags

	* fvwm/parse.h (enum): added F_UNDEFINED define needed by repeat
	function

1999-04-17  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/screen.h (TOP_EDGE): 
	(RIGHT_EDGE): 
	(BOTTOM_EDGE): 
	(LEFT_EDGE): separate cursor types for the pan frames.

	* fvwm/fvwm.c (CreateCursors): initialize the _EDGE cursors
	to be the same as the non-_EDGE ones.

	* fvwm/virtual.c (initPanFrames): use the _EDGE cursors.

	* fvwm/builtins.c (CursorStyle): allow to change the _EDGE cursors.

	* fvwm/fvwm2.1: 
	* NEWS: document the new cursors.
	
1999-04-16  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm2.1: expanded the introductory remarks on layers,
	documented StaysOnBottom, more detailed explanation of the
	override behaviour of Icon.
	
	* fvwm/windows.c (do_windowList): 
	* fvwm/style.c (ProcessNewStyle): 
	* fvwm/fvwm.c:
	* fvwm/screen.h (ScreenInfo): renamed OnTopLayer -->
	TopLayer, StaysPutLayer --> DefaultLayer, new variable
	BottomLayer.

	* fvwm/builtins.c (SetDefaultLayers): set all three 
	layer variables in the Scr struct.
	
	* fvwm/style.c (ProcessNewStyle): added style option
	StaysOnBottom.

1999-04-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (menuShortcuts): Page up and page down work like
	shift-up and shift-down in menus, i.e. they jump to the start or end of
	the menu
	(menuShortcuts): fixed up/down when pressed with the pointer outside
	the menu

	* fvwm/repeat.c (set_repeat_data): removed fprintfs

	* fvwm/functions.c (DeferExecution): allow to abot DeferExecution with
	Escape key
	(ComplexFunction2): fixed use_depth
	(func_comp): removed temporary variables to speed things up a bit