@@ -551,37 +551,37 @@ BroadcastPacket(unsigned long event_type, unsigned long num_datum, ...)
 
 #define SETOLDFLAGS \
 { int i = 1; \
-  old_flags |= DO_START_ICONIC(t)		? i : 0; i<<1; \
-  old_flags |= False /* OnTop */		? i : 0; i<<1; \
-  old_flags |= IS_STICKY(t)			? i : 0; i<<1; \
-  old_flags |= DO_SKIP_WINDOW_LIST(t)		? i : 0; i<<1; \
-  old_flags |= IS_ICON_SUPPRESSED(t)		? i : 0; i<<1; \
-  old_flags |= HAS_NO_ICON_TITLE(t)		? i : 0; i<<1; \
-  old_flags |= IS_LENIENT(t)			? i : 0; i<<1; \
-  old_flags |= IS_ICON_STICKY(t)		? i : 0; i<<1; \
-  old_flags |= DO_SKIP_ICON_CIRCULATE(t)	? i : 0; i<<1; \
-  old_flags |= DO_SKIP_CIRCULATE(t)		? i : 0; i<<1; \
-  old_flags |= HAS_CLICK_FOCUS(t)		? i : 0; i<<1; \
-  old_flags |= HAS_SLOPPY_FOCUS(t)		? i : 0; i<<1; \
-  old_flags |= !DO_NOT_SHOW_ON_MAP(t)		? i : 0; i<<1; \
-  old_flags |= HAS_BORDER(t)			? i : 0; i<<1; \
-  old_flags |= HAS_TITLE(t)			? i : 0; i<<1; \
-  old_flags |= IS_MAPPED(t)			? i : 0; i<<1; \
-  old_flags |= IS_ICONIFIED(t)			? i : 0; i<<1; \
-  old_flags |= IS_TRANSIENT(t)			? i : 0; i<<1; \
-  old_flags |= False /* Raised */		? i : 0; i<<1; \
-  old_flags |= IS_VISIBLE(t)			? i : 0; i<<1; \
-  old_flags |= IS_ICON_OURS(t)			? i : 0; i<<1; \
-  old_flags |= IS_PIXMAP_OURS(t)		? i : 0; i<<1; \
-  old_flags |= IS_ICON_SHAPED(t)		? i : 0; i<<1; \
-  old_flags |= IS_MAXIMIZED(t)			? i : 0; i<<1; \
-  old_flags |= WM_TAKES_FOCUS(t)		? i : 0; i<<1; \
-  old_flags |= WM_DELETES_WINDOW(t)		? i : 0; i<<1; \
-  old_flags |= IS_ICON_MOVED(t)			? i : 0; i<<1; \
-  old_flags |= IS_ICON_UNMAPPED(t)		? i : 0; i<<1; \
-  old_flags |= IS_MAP_PENDING(t)		? i : 0; i<<1; \
-  old_flags |= HAS_MWM_OVERRIDE_HINTS(t)	? i : 0; i<<1; \
-  old_flags |= HAS_MWM_BUTTONS(t)		? i : 0; i<<1; \
+  old_flags |= DO_START_ICONIC(t)		? i : 0; i<<=1; \
+  old_flags |= False /* OnTop */		? i : 0; i<<=1; \
+  old_flags |= IS_STICKY(t)			? i : 0; i<<=1; \
+  old_flags |= DO_SKIP_WINDOW_LIST(t)		? i : 0; i<<=1; \
+  old_flags |= IS_ICON_SUPPRESSED(t)		? i : 0; i<<=1; \
+  old_flags |= HAS_NO_ICON_TITLE(t)		? i : 0; i<<=1; \
+  old_flags |= IS_LENIENT(t)			? i : 0; i<<=1; \
+  old_flags |= IS_ICON_STICKY(t)		? i : 0; i<<=1; \
+  old_flags |= DO_SKIP_ICON_CIRCULATE(t)	? i : 0; i<<=1; \
+  old_flags |= DO_SKIP_CIRCULATE(t)		? i : 0; i<<=1; \
+  old_flags |= HAS_CLICK_FOCUS(t)		? i : 0; i<<=1; \
+  old_flags |= HAS_SLOPPY_FOCUS(t)		? i : 0; i<<=1; \
+  old_flags |= !DO_NOT_SHOW_ON_MAP(t)		? i : 0; i<<=1; \
+  old_flags |= HAS_BORDER(t)			? i : 0; i<<=1; \
+  old_flags |= HAS_TITLE(t)			? i : 0; i<<=1; \
+  old_flags |= IS_MAPPED(t)			? i : 0; i<<=1; \
+  old_flags |= IS_ICONIFIED(t)			? i : 0; i<<=1; \
+  old_flags |= IS_TRANSIENT(t)			? i : 0; i<<=1; \
+  old_flags |= False /* Raised */		? i : 0; i<<=1; \
+  old_flags |= IS_VISIBLE(t)			? i : 0; i<<=1; \
+  old_flags |= IS_ICON_OURS(t)			? i : 0; i<<=1; \
+  old_flags |= IS_PIXMAP_OURS(t)		? i : 0; i<<=1; \
+  old_flags |= IS_ICON_SHAPED(t)		? i : 0; i<<=1; \
+  old_flags |= IS_MAXIMIZED(t)			? i : 0; i<<=1; \
+  old_flags |= WM_TAKES_FOCUS(t)		? i : 0; i<<=1; \
+  old_flags |= WM_DELETES_WINDOW(t)		? i : 0; i<<=1; \
+  old_flags |= IS_ICON_MOVED(t)			? i : 0; i<<=1; \
+  old_flags |= IS_ICON_UNMAPPED(t)		? i : 0; i<<=1; \
+  old_flags |= IS_MAP_PENDING(t)		? i : 0; i<<=1; \
+  old_flags |= HAS_MWM_OVERRIDE_HINTS(t)	? i : 0; i<<=1; \
+  old_flags |= HAS_MWM_BUTTONS(t)		? i : 0; i<<=1; \
   old_flags |= HAS_MWM_BORDER(t)		? i : 0; }
 #endif /* DISABLE_MBC */
   
