@@ -1,3 +1,11 @@
+Sat Apr 17 13:55:41 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* fvwm/module.c (SETOLDFLAGS): fixed several dozen "statements
+ 	with no effect".
+
+	* fvwm/functions.c (ExecuteFunction): removed unused variable, add
+ 	parentheses in `if' condition
+
 1999-04-17  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* fvwm/resize.c (resize_window): fixed resize-loosing-grip bug
